--- a/docs.html
+++ b/docs.html
@@ -58,7 +58,7 @@
             <label for="nom">Nom :</label>
             <input type="text" id="nom" name="nom" placeholder="Entrez votre nom" required>
 
-            <label for="secret">Secret :</label>
+            <label for="secret">dit qlq chose :</label>
             <input type="text" id="secret" name="secret" placeholder="Entrez votre secret" required>
 
             <button type="submit">Envoyer</button>
